adjust min height based on window size to prevent layout shift when all quests are deleted

--- a/src/app/ui/account-creation/account-setup/SetupUI/QuestBoard/styles.module.css
+++ b/src/app/ui/account-creation/account-setup/SetupUI/QuestBoard/styles.module.css
@@ -14,5 +14,20 @@
   padding: 1rem;
   gap: 0.5rem;
   /* Prevent layout shift when all quests are removed and the "Time to add some quests!" message is displayed */
-  min-height: 6.5rem;
+  min-height: 9.25rem;
+}
+
+/* The below media queries adjust min height based on size of container with "no quests message" present
+to prevent layout shift when all quests are deleted. This is fragile because it is dependent on 
+the specific text. Consider implementing better handling in future */
+@media (min-width: 328px) {
+  .questBoard {
+    min-height: 7rem;
+  }
+}
+
+@media (min-width: 900px) {
+  .questBoard {
+    min-height: 10.25rem;
+  }
 }
